--- a/_posts/2016-07-24-Scroller的3D立体旋转.md
+++ b/_posts/2016-07-24-Scroller的3D立体旋转.md
@@ -8,18 +8,15 @@ tags: [Tech, ]
 Scroller的平滑滑动
 ****
 
-*知识背景
-*3D立体容器旋转
 
-
-### **知识背景**
+### 知识背景
 ####实现平缓滑动的Scroller的调用关系
 Scroller是Android中View平滑移动的一个辅助类，其主要的工作就是计算移动的坐标。
 ![Scroller_smoooth_scrolling.jpg](http://i4.piimg.com/4851/cc766698c2370e22.png)
 Scroller实现平滑滚动的过程一般如图所示，Scroller的startScroll方法有一个duration参数，是滑动的持续时间，在调用了startScroll方法之后，Scroller会根据startX、startY、dx和dy进行移动坐标计算，就是为滑动进行准备工作。之后就是调用invalidate或者postInvalidate进行View的重绘，最后到child.computeScroll。computeScroll是View的一个空方法，需要我们自己实现，然后我们要在computeScroll当中要调用Scroller的computeScrollOffset来判断移动过程是否完成，主要是根据当前时间与记录的mStartTime的时间差来判断，若结束就停止滚动，否则就调用Scroller的ScrollTo或者ScrollBy进行页面的再次重绘往复循环就可以达到规律的平缓滚动效果。
 #### VelocityTracker的简单用法
 VelocityTracker主要被用于触屏事件（Fling）的速率追踪。VelocityTracker的用法也很简单，只要通过addMovement()方法将MotionEvent加入到VelocityTracker的实例中，然后通过computeCurrentVelocity()设置当前速度的单位，1代表px/毫秒，1000代表px/秒，设置好了速度单位就可以getXVelocity()和getYVelocity()方法获取相应的速度了。
-### **3D立体容器旋转**
+### 3D立体容器旋转
 github项目地址[StereoView](https://github.com/ImmortalZ/StereoView)
 ####3D容器立体旋转项目简介
 ![StereoView](http://img.blog.csdn.net/20160715183949279)
@@ -45,8 +42,56 @@ github项目地址[StereoView](https://github.com/ImmortalZ/StereoView)
 
 getScrollY获取的是左上角的坐标点，所以可视区内相邻的两个View的degree的正负定然相反，上面的为正逆时针旋转｜degree｜，下面的为负顺时针旋转｜degree｜，mAngle设置的越大，完成一次View的切换所需要的dy越小。
 
-再来说Demo当中Scroller的调用机制。与前面介绍的实现平缓滑动的Scroller调用有所不同。
+再来说上面Demo当中Scroller的调用机制，与触屏事件息息相关，ACTION_DOWN有两种情况，正常情况下只要在用户触摸到屏幕的时候记录下当前的Y轴坐标值，如果在Fling事件还没有完成，也就是Scroller的滑动事件还没结束的时候用户触摸到了屏幕，就强制Scroller停在当前的位置。ACTION_MOVE的时候只要注意有限的子View在循环滚动的时候的无缝连接就行了。下面来讲一下FLING，在ACTION_UP的时候触发Fling事件，然后利用VelocityTracker捕获当前的滑动速度，然后根据速度和滑动距离进行处理，代码如下： 
 
+    mVelocityTracker.computeCurrentVelocity(1000);
+    float yVelocity = mVelocityTracker.getYVelocity();
+    if (yVelocity > standerSpeed || ((getScrollY() + mHeight / 2) / mHeight < mStartScreen)) {
+         mState = State.ToPre;
+      } else if (yVelocity < -standerSpeed || ((getScrollY() － mHeight / 2) / mHeight > mStartScreen))     
+      {
+        mState = State.ToNext;
+      } else {
+        mState = State.Normal;
+      }
+    changeByState(yVelocity);
+    if (mVelocityTracker != null) {
+        mVelocityTracker.recycle();
+        mVelocityTracker = null;
+      }
+当Y轴的向上滑动速度大于规定的速度，或者上一页页面展现出的高度超过1/2，则设定状态为State.ToPre，进行向上的Fling滑动，或者完全的展示出上一页面。如果下滑速度大于规定的速度，或者下一页页面展现出的高度超过1/2的时候设定状态为State.toNext，进行向下的Fling滑动，或者是完全展示出下一页面。余下的情况就只要保证当前页面完全展示出来，状态为State.Normal。三种状态的相关的action函数都会调用Scroller的startScroll的函数，然后调用已经实现的computeScroll方法，代码如下所示：
+         
+    public void computeScroll() {
+        //滑动没有结束时，进行的操作
+        if (mScroller.computeScrollOffset()) {
+            if (mState == State.ToPre) {
+                scrollTo(mScroller.getCurrX(), mScroller.getCurrY() + mHeight * alreadyAdd);
+                if (getScrollY() < (mHeight + 2) && addCount > 0) {
+                    isAdding = true;
+                    addPre();
+                    alreadyAdd++;
+                    addCount--;
+                }
+            } else if (mState == State.ToNext) {
+                scrollTo(mScroller.getCurrX(), mScroller.getCurrY() - mHeight * alreadyAdd);
+                if (getScrollY() > (mHeight) && addCount > 0) {
+                    isAdding = true;
+                    addNext();
+                    addCount--;
+                    alreadyAdd++;
+                }
+            } else {
+                //mState == State.Normal状态
+                scrollTo(mScroller.getCurrX(), mScroller.getCurrY());
+            }
+            postInvalidate();
+        }
+        //滑动结束时相关用于计数变量复位
+        if (mScroller.isFinished()) {
+            alreadyAdd = 0;
+            addCount = 0;
+        }
+    }
 
 
  
