内容完全版

--- a/_posts/2016-07-24-Scroller的3D立体旋转.md
+++ b/_posts/2016-07-24-Scroller的3D立体旋转.md
@@ -93,7 +93,7 @@ getScrollY获取的是左上角的坐标点，所以可视区内相邻的两个V
         }
     }
 
-
+这里解释一下，这个computeScroll方法是ViewGroup的，因为ViewGroup继承自View，在 View的draw方法里面会调用该空方法。
  
 
 
