--- a/_posts/2016-07-24-Scroller的3D立体旋转.md
+++ b/_posts/2016-07-24-Scroller的3D立体旋转.md
@@ -4,29 +4,29 @@ title:  Scroller的3D立体容器旋转
 categories: [blog ]  
 tags: [Tech, ]     
 ---
-## Scroller的3D立体容器旋转
+# Scroller的3D立体容器旋转
 Scroller的平滑滑动
 ****
 
 
-### 知识背景
+## 知识背景
 
-#### 实现平缓滑动的Scroller的调用关系
+### 实现平缓滑动的Scroller的调用关系
 Scroller是Android中View平滑移动的一个辅助类，其主要的工作就是计算移动的坐标。
 ![Scroller_smoooth_scrolling.jpg](http://i4.piimg.com/4851/cc766698c2370e22.png)
 Scroller实现平滑滚动的过程一般如图所示，Scroller的startScroll方法有一个duration参数，是滑动的持续时间，在调用了startScroll方法之后，Scroller会根据startX、startY、dx和dy进行移动坐标计算，就是为滑动进行准备工作。之后就是调用invalidate或者postInvalidate进行View的重绘，最后到child.computeScroll。computeScroll是View的一个空方法，需要我们自己实现，然后我们要在computeScroll当中要调用Scroller的computeScrollOffset来判断移动过程是否完成，主要是根据当前时间与记录的mStartTime的时间差来判断，若结束就停止滚动，否则就调用Scroller的ScrollTo或者ScrollBy进行页面的再次重绘往复循环就可以达到规律的平缓滚动效果。
 
-#### VelocityTracker的简单用法
+### VelocityTracker的简单用法
 VelocityTracker主要被用于触屏事件（Fling）的速率追踪。VelocityTracker的用法也很简单，只要通过addMovement()方法将MotionEvent加入到VelocityTracker的实例中，然后通过computeCurrentVelocity()设置当前速度的单位，1代表px/毫秒，1000代表px/秒，设置好了速度单位就可以getXVelocity()和getYVelocity()方法获取相应的速度了。
 
-### 3D立体容器旋转
+## 3D立体容器旋转
 github项目地址[StereoView](https://github.com/ImmortalZ/StereoView)
 
-####3D容器立体旋转项目简介
+### 3D容器立体旋转项目简介
 ![StereoView](http://img.blog.csdn.net/20160715183949279)
 该项目实现了容器里面，MOVE的时候实现正常的循环3D切换，FLING的时候利用VelocityTracker进行速度追踪，以一定的阻尼进行减速滑行。
 
-####3D容器立体旋转的实现机制
+### 3D容器立体旋转的实现机制
 首先是一定旋转角度的代码实现：
 
         int curScreenY = mHeight * i; //i是ViewGroup的子View的序数，从0开始
